[package]
name = "onebot-reporting-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
onebot-api = "0.1.2"
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = true
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1
